fix layout bug

--- a/src/main/less/main.less
+++ b/src/main/less/main.less
@@ -77,6 +77,7 @@ a {
 .status-message {
   .body-font(@font-color-light);
   line-height: 32px;
+  height: 32px;
 
   &.error {
     color: @error-color;
@@ -285,7 +286,6 @@ button.delete-btn:not(.confirm) {
   width: 100%;
   padding: 0px 0px 0px 20px;
   transition: background-color 1000ms;
-
   border-bottom: 1px solid @border-color;
 
   &:last-child {
